@@ -1,5 +1,5 @@
 /*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
+ * Copyright 2005-2006 Sun Microsystems, Inc.  All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,33 +25,6 @@
  * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
  */
 
-/*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
- *
- * This code is free software; you can redistribute it and/or modify it
- * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Sun designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Sun in the LICENSE file that accompanied this code.
- *
- * This code is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * version 2 for more details (a copy is included in the LICENSE file that
- * accompanied this code).
- *
- * You should have received a copy of the GNU General Public License version
- * 2 along with this work; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- *
- * Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
- * CA 95054 USA or visit www.sun.com if you need additional information or
- * have any questions.
- *
- * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
- *
- */
 
 
 package com.sun.xml.internal.fastinfoset.tools;
@@ -223,7 +196,7 @@ public class VocabularyGenerator extends DefaultHandler implements LexicalHandle
 
 
     public void addToTable(String s, Set v, StringIntMap m, StringArray a) {
-        if (s == "") {
+        if (s.length() == 0) {
             return;
         }
 
@@ -235,7 +208,7 @@ public class VocabularyGenerator extends DefaultHandler implements LexicalHandle
     }
 
     public void addToTable(String s, Set v, StringIntMap m, PrefixArray a) {
-        if (s == "") {
+        if (s.length() == 0) {
             return;
         }
 
@@ -272,18 +245,18 @@ public class VocabularyGenerator extends DefaultHandler implements LexicalHandle
         int namespaceURIIndex = -1;
         int prefixIndex = -1;
         int localNameIndex = -1;
-        if (namespaceURI != "") {
+        if (namespaceURI.length() > 0) {
             namespaceURIIndex = _serializerVocabulary.namespaceName.get(namespaceURI);
             if (namespaceURIIndex == KeyIntMap.NOT_PRESENT) {
                 throw new SAXException(CommonResourceBundle.getInstance().
-                        getString("message.namespaceURINotIndexed", new Object[]{new Integer(namespaceURIIndex)}));
+                        getString("message.namespaceURINotIndexed", new Object[]{Integer.valueOf(namespaceURIIndex)}));
             }
 
-            if (prefix != "") {
+            if (prefix.length() > 0) {
                 prefixIndex = _serializerVocabulary.prefix.get(prefix);
                 if (prefixIndex == KeyIntMap.NOT_PRESENT) {
                     throw new SAXException(CommonResourceBundle.getInstance().
-                            getString("message.prefixNotIndexed", new Object[]{new Integer(prefixIndex)}));
+                            getString("message.prefixNotIndexed", new Object[]{Integer.valueOf(prefixIndex)}));
                 }
             }
         }
